<resources>
    <string name="app_name">FinMonitor</string>
    <string name="cadastro_produto">Cadastro de Produto</string>
    <string name="nome">Nome</string>
    <string name="tipo_produto">Tipo do produto</string>
    <string name="text_isin">Código Isin(Identificação do produto)</string>
    <string name="text_risco">Risco do produto</string>
    <string name="ra_baixo">Baixo</string>
    <string name="ra_medio">Médio</string>
    <string name="ra_alto">Alto</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="ativo">Produto ativado</string>
    <string name="nome_vazio">Campo nome não pode ser vazio!</string>
    <string name="codigo_vazio">O campo código não pode ser vazio!</string>
    <string name="risco_produto">É necessário indicar o grau de risco do produto!</string>
    <string name="campos_reiniciados">Campos reiniciados!</string>
    <string name="sucesso">Operação realizada com sucesso!</string>
    <string name="foi_clicado">" foi clicado!"</string>
    <string name="o_produto">"O produto: "</string>
    <string name="nome_aluno">Nome do Aluno:</string>
    <string name="curso">Curso:</string>
    <string name="utfpr">Universidade Tecnológica Federal do Paraná</string>
    <string name="email">E-mail:</string>
    <string name="descricao_aplicativo">Este aplicativo visa substituir uma planilha para que seja feito o acompanhamento dos investimentos bancários.</string>
    <string name="sobre">Sobre</string>
    <string name="nome_curso">Tecnologia Java</string>
    <string name="nome__aluno">Adalberto Gonçalves da Silva</string>
    <string name="email_aluno">adalbertosilva@alunos.utfpr.edu.br</string>
    <string name="texto_sobre">Controle de investimentos financeiros por produto e intituições.</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="listar">Listar Produtos</string>
    <string name="adicionar">Adicionar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
</resources>