<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProdutoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/cadastro_produto"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/nome"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

            <EditText
                android:id="@+id/editNome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:inputType="text"
                android:textColor="#293B9D"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textProduto" />

            <TextView
                android:id="@+id/textNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/tipo_produto"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editNome" />

            <Spinner
                android:id="@+id/spinnerTipo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:spinnerMode="dialog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textNome" />

            <TextView
                android:id="@+id/textCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_isin"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerTipo" />

            <EditText
                android:id="@+id/editCodigo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:inputType="text"
                android:textColor="#293B9D"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCodigo" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_risco"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCodigo" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <RadioButton
                    android:id="@+id/radioBaixo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ra_baixo"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioMedio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ra_medio"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioAlto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ra_alto"
                    android:textSize="18sp" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/ativo"
                android:textColor="#293B9D"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <Button
                android:id="@+id/buttonSalvar"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:backgroundTintMode="add"
                android:onClick="salvar"
                android:text="@string/salvar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonLimpar"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <Button
                android:id="@+id/buttonLimpar"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="limpar"
                android:text="@string/limpar"
                app:layout_constraintEnd_toStartOf="@+id/buttonSalvar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>